Working _lessgo with messy code FIXIT

--- a/discord.env
+++ b/discord.env
@@ -1,2 +1,3 @@
 DISCORD_TOKEN=ODYxMzMxNDc3MzMyMjMwMTg1.YOIPcg.TNS4X2y3bxEFywcduSZs5pOxKl4
 DISCORD_GUILD="bonkermode"
+FFMPEG_PATH="D:\\CodingEnvironments\\libraries\\ffmpeg\\bin\\ffmpeg.exe"
